--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -167,6 +167,8 @@ html(lang="ru")
             .text-center.px-4
               button.btn.text-uppercase.px-5(type="submit") Отправить
 
+    block popups
+
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css")
     script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js")
