--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -63,3 +63,11 @@ a {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+.theme-hover {
+  color: $color__text_default;
+
+  &:hover {
+    @include color($color__brand);
+  }
+}
