--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -81,4 +81,5 @@ $grid-gutter-width: 8px;
 @import 'tpl/bubble';
 @import 'tpl/result';
 @import 'tpl/panel';
+@import 'tpl/popup';
 @import 'tpl/footer';
