--- a/src/pug/personal-user.pug
+++ b/src/pug/personal-user.pug
@@ -9,39 +9,77 @@ block profile
       span.header__nav-icon.d-flex.flex-column.align-items-center.justify-content-center
         +icon('search')
       span.header__btn-title Поиск
-    a.header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap.col-lg-3(href="#")
-      span.d-flex.align-items-center.justify-content-center.pos-rel
-        span.header__nav-icon.d-flex.flex-column.align-items-center.justify-content-center.mr-1
-          +icon('compare')
-        span.header__nav-value.d-flex.align-items-center.justify-content-center.h6.bg-theme-success.color-theme-white.rounded-circle 3
-      span.header__btn-title Сравнить
-    a.header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap.col-lg-3(href="#")
-      span.header__nav-icon.d-flex.flex-column.align-items-center.justify-content-center
-        +icon('car','color-theme-success')
-      span.header__btn-title HYUNDAI Accent
-    a.header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap.col-lg-3(href="#")
-      span.header__nav-icon.d-flex.flex-column.align-items-center.justify-content-center
-        +icon('case')
-      span.header__btn-title Заказы
-    .header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap.col-lg-3
-      .d-flex.align-items-center.justify-content-center
-        .header__nav-icon.d-flex.flex-column.align-items-center.justify-content-center.mr-1
-          +icon('user')
-        .header__nav-value.d-flex.align-items-center.justify-content-center.h6.bg-theme-success.color-theme-white.rounded-pill.px-2
-          span.font-weight-bold 300&nbsp;
-          | Б.₽.
-      .d-flex.justify-content-center
-        a.header__btn-title.btn-unstyled(href="#") Сергей | выход
-  .d-flex.align-items-center.justify-content-center
-    a.header__btn.text-uppercase.header__btn_inverse(href="#")
-      +icon('cart','header__btn-icon d-block')
-    .d-flex.flex-column.justify-content-between
-      .header__nav-value.d-flex.align-items-center.justify-content-center.h6.bg-theme-success.color-theme-white.rounded-pill.px-2.mb-1
-        span.font-weight-bold 3&nbsp;
-        | шт.
-      .header__nav-value.d-flex.align-items-center.justify-content-center.h6.bg-theme-light.color-theme-brand.rounded-pill.box-shadow.px-2
-        | 29&nbsp;
-        +icon('favourite')
+    .pos-rel.col-lg-3
+      a.header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap(href="#")
+        span.d-flex.align-items-center.justify-content-center.pos-rel
+          span.header__nav-icon.d-flex.flex-column.align-items-center.justify-content-center.mr-md-1
+            +icon('compare')
+          span.header__counter.header__counter_value_compare.d-flex.align-items-center.justify-content-center.h6.bg-theme-success.color-theme-white.rounded-circle 3
+        span.header__btn-title Сравнить
+      .popup.popup_width_md.popup_pos_left.box-shadow.border-radius.d-block
+        .popup__triangle.bg-theme-white.box-shadow
+        .bg-theme-white.border-radius.zi-2.px-4.py-3
+          .d-flex.align-items-start.justify-content-between.mb-4
+            .popup__title.h3.font-weight-bold.color-theme-brand Товар готов к сравнению
+            .h4.text-nowrap.d-flex.flex-column.align-items-center.justify-content-center.box-shadow.bg-theme-success.color-theme-white.rounded-pill.px-2.py-1 3 шт.
+          .popup__content.mb-5
+            a.h5.theme-hover(href="#") Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL  Ice Guard
+          .d-flex.align-items-center.justify-content-between
+            button.popup__close.btn.btn_nobg.text-left.px-0(type="button") Продолжить
+              br
+              | покупки
+            button.btn.text-uppercase(href="#") Сравнить
+    .pos-rel.col-lg-3
+      a.header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap(href="#")
+        span.header__nav-icon.d-flex.flex-column.align-items-center.justify-content-center
+          +icon('car','color-theme-success')
+        span.header__btn-title HYUNDAI Accent
+      .popup.box-shadow.border-radius.d-block
+        .popup__triangle.bg-theme-white.box-shadow
+        .bg-theme-white.border-radius.zi-2.pt-4.pb-3.px-4
+          .popup__title.h5.color-theme-brand.mb-2 Выберете свой автомобиль и поиск товаров на сайте станет значительно проще.
+          .d-flex.align-items-center.justify-content-between
+            button.popup__close.btn.btn_nobg.px-0(type="button") Позже
+            a.btn.font-weight-bold.px-3(href="#") ОК
+    .pos-rel.col-lg-3
+      a.header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap(href="#")
+        span.header__nav-icon.d-flex.flex-column.align-items-center.justify-content-center
+          +icon('case')
+        span.header__btn-title Заказы
+    .pos-rel.col-lg-3
+      .header__nav-item.header__nav-item_col.d-flex.flex-column.text-center.text-nowrap
+        .d-flex.align-items-center.justify-content-center
+          .header__nav-icon.header__nav-icon_feature_bonus.d-flex.flex-column.align-items-center.justify-content-center.mr-md-1
+            +icon('user')
+          .header__counter.d-none.d-md-flex.align-items-center.justify-content-center.h6.bg-theme-success.color-theme-white.rounded-pill.px-2
+            span.font-weight-bold.mr-1 300
+            | Б.₽.
+        .d-flex.justify-content-center
+          a.header__btn-title.btn-unstyled(href="#") Сергей | выход
+  .pos-rel
+    .d-flex.align-items-center.justify-content-center
+      a.header__btn.header__btn_inverse(href="#")
+        +icon('cart','header__btn-icon d-block')
+      .header__cart-data.d-flex.flex-column.justify-content-between
+        a.header__counter.d-flex.align-items-center.justify-content-center.h6.bg-theme-success.color-theme-white.rounded-pill.px-md-2.mb-1(href="#")
+          span.font-weight-bold.mr-md-1 3
+          span.d-none.d-md-block шт.
+        a.header__counter.d-flex.align-items-center.justify-content-center.h6.bg-theme-light.color-theme-brand.rounded-pill.box-shadow.px-md-2(href="#")
+          span.mr-md-1 29
+          +icon('favourite','d-none d-md-block')
+    .popup.popup_width_md.popup_pos_right.box-shadow.border-radius.d-block
+      .popup__triangle.bg-theme-white.box-shadow
+      .bg-theme-white.border-radius.zi-2.px-4.py-3
+        .d-flex.align-items-start.justify-content-between.mb-4
+          .popup__title.h3.font-weight-bold.color-theme-brand Товар добавлен в избранное
+          .h4.text-nowrap.d-flex.flex-column.align-items-center.justify-content-center.box-shadow.bg-theme-light.color-theme-brand.rounded-pill.px-2.py-1 3 шт.
+        .popup__content.mb-5
+          a.h5.theme-hover(href="#") Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL  Ice Guard
+        .d-flex.align-items-center.justify-content-between
+          button.popup__close.btn.btn_nobg.text-left.px-0(type="button") Продолжить
+            br
+            | покупки
+          button.btn.text-uppercase(href="#") В избранное
 
 block personal
   .h2.font-weight-bold.text-center.mb-4 #{title}
