--- a/src/scss/tpl/_header.scss
+++ b/src/scss/tpl/_header.scss
@@ -139,6 +139,10 @@
       .header__nav-icon {
         background: $color__light;
       }
+
+      .header__btn-title {
+        color: $color__brand;
+      }
     }
   }
 }
@@ -150,11 +154,10 @@
   border-radius: 50%;
   color: $color__brand;
   transition: all .3s ease;
-}
 
-.header__nav-value {
-  min-width: 18px;
-  height: 18px;
+  &.header__nav-icon_feature_bonus {
+    color: $color__success;
+  }
 }
 
 .header__btn-title {
@@ -243,6 +246,23 @@
       background: $color__light;
       color: $color__text_default;
       box-shadow: 0px 4px 10px rgba(0, 0, 0, .12) inset;
+    }
+  }
+}
+
+.header__cart-data {
+  margin: 0 0 0 -.25rem;
+}
+
+.header__counter {
+  min-width: 18px;
+  height: 18px;
+
+  &.header__counter_value_compare {
+    @include media-breakpoint-down(sm) {
+      position: absolute;
+      top: -8px;
+      margin: 0 0 0 22px;
     }
   }
 }
