feature/minicart, pt. 1

--- a/src/scss/tpl/_card.scss
+++ b/src/scss/tpl/_card.scss
@@ -13,6 +13,10 @@
     max-width: 207px;
   }
 
+  &.card_slide_sm {
+    max-width: 145px;
+  }
+
   &.card_sm {
     @include media-breakpoint-down(md) {
       max-width: 207px;
