--- a/src/pug/personal-user.pug
+++ b/src/pug/personal-user.pug
@@ -22,7 +22,7 @@ block profile
           .d-flex.align-items-start.justify-content-between.mb-4
             .popup__title.h3.font-weight-bold.color-theme-brand Товар готов к сравнению
             .h4.text-nowrap.d-flex.flex-column.align-items-center.justify-content-center.box-shadow.bg-theme-success.color-theme-white.rounded-pill.px-2.py-1 3 шт.
-          .popup__content.mb-5
+          .mb-5
             a.h5.theme-hover(href="#") Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL  Ice Guard
           .d-flex.align-items-center.justify-content-between
             button.popup__close.btn.btn_nobg.text-left.px-0(type="button") Продолжить
@@ -67,19 +67,70 @@ block profile
         a.header__counter.d-flex.align-items-center.justify-content-center.h6.bg-theme-light.color-theme-brand.rounded-pill.box-shadow.px-md-2(href="#")
           span.mr-md-1 29
           +icon('favourite','d-none d-md-block')
-    .popup.popup_width_md.popup_pos_right.box-shadow.border-radius.d-block
+    .popup.popup_width_md.popup_pos_right.box-shadow.border-radius.d-none.block
       .popup__triangle.bg-theme-white.box-shadow
       .bg-theme-white.border-radius.zi-2.px-4.py-3
         .d-flex.align-items-start.justify-content-between.mb-4
           .popup__title.h3.font-weight-bold.color-theme-brand Товар добавлен в избранное
           .h4.text-nowrap.d-flex.flex-column.align-items-center.justify-content-center.box-shadow.bg-theme-light.color-theme-brand.rounded-pill.px-2.py-1 3 шт.
-        .popup__content.mb-5
+        .mb-5
           a.h5.theme-hover(href="#") Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL  Ice Guard
         .d-flex.align-items-center.justify-content-between
           button.popup__close.btn.btn_nobg.text-left.px-0(type="button") Продолжить
             br
             | покупки
           button.btn.text-uppercase(href="#") В избранное
+    .popup.popup_width_lg.popup_pos_right.box-shadow.border-radius.d-block
+      .popup__triangle.bg-theme-white.box-shadow
+      button.popup__close.popup__close_type_btn.btn-unstyled.rounded-circle.bg-theme-white(type="button")
+        +icon('close','h3 color-theme-brand')
+      .bg-theme-white.border-radius.zi-2
+        .popup__content
+          .p-4.border-bottom
+            .popup__title.h3.font-weight-bold.color-theme-brand.mb-4 Товар успешно добавлен в корзину
+            .row.mb-4
+              .col-6.col-sm-3.offset-3.pr-3.mb-3.mb-sm-0.ml-sm-0
+                a.border.border-radius.overflow-hidden.d-block(href="#")
+                  +img('content/cards/card-1.jpg')
+              .col-sm-8
+                a.h5.theme-hover.d-block.mb-3(href="#") Зимние шины Yokohama Ice Guard IG55 215/55 R17 98T XL Ice Guard
+                .d-flex.align-items-center
+                  .recalculate.recalculate_sm.recalculate_shadow.d-flex.align-items-center.overflow-hidden.bg-theme-white.mr-4
+                    input.recalculate__field.d-none(type="number" name="count" value="1")
+                    button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_remove(type="button") -
+                    .recalculate__value.recalculate__value_sm.d-flex.align-items-center.justify-content-center.color-theme-brand 1
+                    button.recalculate__btn.recalculate__btn_sm.font-weight-bold.color-theme-brand.flex-grow-1.recalculate__btn_add(type="button") +
+                  .h3.d-flex
+                    .font-weight-bold.text-nowrap.mr-1 7 337.12
+                    | ₽
+            .d-flex.flex-wrap.align-items-center.justify-content-center.justify-content-sm-between
+              a.btn.btn_nobg.h4.mb-2.mb-sm-0.px-3.px-0.py-0(href="#")
+                +icon('continue','h3 color-theme-brand mr-2')
+                span.h5 Продолжить покупки
+              button.btn.text-uppercase(href="#") Перейти в корзину
+          .pt-4.px-4.pb-3
+            .h4.mb-3 Рекомендуем
+            .slides.slides_carousel.swiper-container.pt-1.pb-3
+              +slidesNav
+              - var wheels = ['Диск КиК Сильверстоун (КС770-02) 6,5x17','Диск КиК Сильверстоун (КС770-02) 6,5x17','Диск КиК Сильверстоун (КС770-02) 6,5x17','Диск КиК Сильверстоун (КС770-02) 6,5x17','Диск КиК Сильверстоун (КС770-02) 6,5x17','Диск КиК Сильверстоун (КС770-02) 6,5x17','Диск КиК Сильверстоун (КС770-02) 6,5x17','Диск КиК Сильверстоун (КС770-02) 6,5x17','Диск КиК Сильверстоун (КС770-02) 6,5x17','Диск КиК Сильверстоун (КС770-02) 6,5x17','Диск КиК Сильверстоун (КС770-02) 6,5x17','Диск КиК Сильверстоун (КС770-02) 6,5x17','Диск КиК Сильверстоун (КС770-02) 6,5x17',]
+              .swiper-wrapper.align-items-stretch
+                each wheels__item in wheels
+                  .swiper-slide.pr-3
+                    .card.card_slide_sm.d-flex.flex-column.justify-content-between.h-100.p-3
+                      .card__header.mb-2
+                        a.card__picture(href="#")
+                          +img('content/cards/card-2.jpg')
+                        .card__meta.card__meta_left
+                          .label.label_hit.text-uppercase.px-2 Хит
+                      .card__body.d-flex.flex-column.justify-content-between.flex-grow-1
+                        .card__intro
+                          a.h6.theme-hover.d-block.mb-1(href="#")!= wheels__item
+                        .card__footer
+                          .card__meta.card__meta_row.mb-2
+                            .card__price
+                              span.card__price-value 7 337.12
+                              | ₽
+                          a.btn.text-uppercase(href="#") В корзину
 
 block personal
   .h2.font-weight-bold.text-center.mb-4 #{title}
