--- a/src/scss/tpl/_header.scss
+++ b/src/scss/tpl/_header.scss
@@ -182,6 +182,20 @@
   padding: .5rem .688rem;
   letter-spacing: .03em;
 
+  &.header__btn_type_cart-holder {
+    @include before;
+    border-radius: .5rem !important;
+
+    &:before {
+      @include wh(100%);
+      @include pos(0,0,fixed);
+      opacity: 0;
+      pointer-events: none;
+      transition: all .3s ease;
+      background-color: rgba(82, 82, 82, .2);
+    }
+  }
+
   &.header__btn_inverse {
     @include media-breakpoint-down(md) {
       @include color($color__brand);
@@ -199,6 +213,11 @@
       border-radius: .5rem .5rem 0 0;
     }
 
+    &:before {
+      opacity: 1;
+      pointer-events: all;
+    }
+
     .header__btn-icon_show {
       @include media-breakpoint-up(md) {
         display: none;
@@ -209,6 +228,10 @@
       @include media-breakpoint-up(md) {
         display: block;
       }
+    }
+
+    .header__btn-caption {
+      width: 100%;
     }
   }
 }
@@ -225,6 +248,11 @@
   @include media-breakpoint-down(md) {
     display: none;
   }
+}
+
+.header__btn-caption {
+  width: 0;
+  overflow: hidden;
 }
 
 .header__footer {
