feature/header menu

--- a/src/scss/tpl/_header.scss
+++ b/src/scss/tpl/_header.scss
@@ -57,7 +57,7 @@
 
 .header__top {
   padding: .625rem 0;
-  overflow: hidden;
+  //overflow: hidden;
   background: $color__light;
   transition: all .3s ease;
 }
