--- a/src/pug/tpl/header.pug
+++ b/src/pug/tpl/header.pug
@@ -1,6 +1,6 @@
 .icons.d-none
 header.header
-  .header__top
+  .header__top.zi-2
     .wrapper.d-flex.flex-wrap.align-items-center
       .col-xl-6.col-lg-12.col-8.d-flex.align-items-center.justify-content-xl-start.justify-content-lg-between.mb-xl-0.mb-lg-2
         .contacts.d-flex.align-items-center.justify-content-lg-between.col-xl-7.col-lg-5.w-auto.px-0
@@ -22,22 +22,30 @@ header.header
           a.header__nav-item(href="#") Контакты
       .col-xl-1.col-lg-2.col-4.d-flex.align-items-xl-start.justify-content-end
         .menu
-          button.menu__title.d-flex.align-items-center(type="button")
+          button.menu__title.theme-hover.d-flex.align-items-center.zi-2(type="button")
             span.mr-1 Помощь
             +icon('dropdown','menu__icon h6')
-          .menu__wrapper
+          .menu__wrapper.pt-2
+            a.h6.d-block.theme-hover.zi-2.mb-2(href="#") О компании
+            a.h6.d-block.theme-hover.zi-2.mb-2(href="#") Новости
+            a.h6.d-block.theme-hover.zi-2.mb-2(href="#") Статьи
+            a.h6.d-block.theme-hover.zi-2.mb-2(href="#") Вопросы и ответы
+            a.h6.d-block.theme-hover.zi-2.mb-2(href="#") Оплата и доставка
+            a.h6.d-block.theme-hover.zi-2.mb-2(href="#") Кредит
+            a.h6.d-block.theme-hover.zi-2.mb-2(href="#") КупиВкредит
+            a.h6.d-block.theme-hover.zi-2.mb-2(href="#") Политика конфиденциальности
   .header__wrapper
     .header__col.header__col_logo.col-xl-4.col-lg-5.mb-3
       a.logo.color-theme-brand.mr-4(href="#")
         +svg('logo')
       nav.header__nav.d-flex.align-items-center.justify-content-center
         button.header__btn.header__btn_type_toggler.text-uppercase.mr-3(type="button" data-target="#categories")
-          +icon('menu','header__btn-icon header__btn-icon_show mr-md-2')
-          +icon('close','header__btn-icon header__btn-icon_close mr-md-2')
+          +icon('menu','header__btn-icon header__btn-icon_show mr-sm-2')
+          +icon('close','header__btn-icon header__btn-icon_close mr-sm-2')
           span.d-none.d-sm-block.pointer-events-none Каталог
         button.header__btn.header__btn_type_toggler.text-uppercase(type="button" data-target="#services")
-          +icon('services','header__btn-icon header__btn-icon_show mr-md-2')
-          +icon('close','header__btn-icon header__btn-icon_close mr-md-2')
+          +icon('services','header__btn-icon header__btn-icon_show mr-sm-2')
+          +icon('close','header__btn-icon header__btn-icon_close mr-sm-2')
           span.d-none.d-sm-block.pointer-events-none Услуги
         .panel
           #services.panel__wrapper
@@ -237,17 +245,17 @@ header.header
     nav.topmenu.swiper-container
       .topmenu__wrapper.swiper-wrapper
         .swiper-slide.w-auto
-          a.topmenu__item(href="#") Автошины
+          a.toptheme-hover(href="#") Автошины
         .swiper-slide.w-auto
-          a.topmenu__item(href="#") Мотошины
+          a.toptheme-hover(href="#") Мотошины
         .swiper-slide.w-auto
-          a.topmenu__item(href="#") Диски
+          a.toptheme-hover(href="#") Диски
         .swiper-slide.w-auto
-          a.topmenu__item(href="#") Аккумуляторы
+          a.toptheme-hover(href="#") Аккумуляторы
         .swiper-slide.w-auto
-          a.topmenu__item(href="#") Масла
+          a.toptheme-hover(href="#") Масла
         .swiper-slide.w-auto
-          a.topmenu__item(href="#") Автотовары
+          a.toptheme-hover(href="#") Автотовары
         .swiper-slide.w-auto
-          a.topmenu__item(href="#") Шиномонтаж
+          a.toptheme-hover(href="#") Шиномонтаж
   block filter
