--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -49,6 +49,8 @@ $grid-gutter-width: 8px;
 @import 'tpl/filter-btn';
 @import 'tpl/filter-toggler';
 @import 'tpl/category-menu';
+@import 'tpl/booking-form';
+@import 'tpl/booking-heading';
 @import 'tpl/banner';
 @import 'tpl/social';
 @import 'tpl/search';
@@ -70,6 +72,7 @@ $grid-gutter-width: 8px;
 @import 'tpl/leftmenu';
 @import 'tpl/accordion';
 @import 'tpl/pagination';
+@import 'tpl/datepicker';
 @import 'tpl/recalculate';
 @import 'tpl/product-list';
 @import 'tpl/table-row';
