--- a/src/scss/tpl/_card.scss
+++ b/src/scss/tpl/_card.scss
@@ -30,7 +30,7 @@
 
     @include media-breakpoint-only(xs) {
       display: grid;
-      grid-column-gap: 16px;
+      grid-column-gap: 1rem;
       grid-row-gap: 0;
       grid-template-columns: repeat(2,1fr);
     }
