--- a/src/pug/base.pug
+++ b/src/pug/base.pug
@@ -169,6 +169,7 @@ html(lang="ru")
 
     block popups
 
+    //- link(rel="stylesheet" href="https://unpkg.com/js-datepicker/dist/datepicker.min.css")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css")
     script(src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js")
@@ -178,6 +179,7 @@ html(lang="ru")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/formstone/1.4.20/js/touch.js")
     script(src="https://refreshless.com/nouislider/documentation/assets/wNumb.js")
     script(src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js")
+    //- script(src="https://unpkg.com/js-datepicker")
 
 //-
     + pug/tile - товары и баннеры в плитке на стр. результатов results-tires.html http://dl3.joxi.net/drive/2021/11/04/0050/2358/3311926/26/d2900e3683.jpg
