--- a/src/pug/category.pug
+++ b/src/pug/category.pug
@@ -379,9 +379,8 @@ block wrapper
 
       include base/links.pug
 
-      .section
-        .content.content_expanded
-          include base/content.pug
-          .content__footer
-            button.readmore.readmore_btn(type="button")
-              +icon('readmore','h2 color-theme-brand')
+      .content.content_expanded.mb-5
+        include base/content.pug
+        .content__footer
+          button.readmore.readmore_btn(type="button")
+            +icon('readmore','h2 color-theme-brand')
