--- a/src/scss/tpl/_category.scss
+++ b/src/scss/tpl/_category.scss
@@ -6,7 +6,7 @@
 .category {
   display: grid;
 
-  grid-column-gap: 8px;
+  grid-column-gap: .5rem;
   grid-row-gap: 16px;
 
   @include media-breakpoint-up(xl) {
